src/objects/Zuora__CustomerAccount__c.object
<CustomObject>
    <fields>
        <fullName>eBroadcast_Payment_Token__c</fullName>
        <description>The token for eBroadcast payment. This is to ensure the integrity of transition to the payment page from its calling page.</description>
        <inlineHelpText>The token for eBroadcast payment. This is to ensure the integrity of transition to the payment page from its calling page.</inlineHelpText>
        <label>eBroadcast Payment Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eBroadcast_Product_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For eBroadcast application, the field designates if the account is given access to the application area (one time payment required, access forever)</description>
        <inlineHelpText>For eBroadcast application, the field designates if the account is given access to the application area (one time payment required, access forever)</inlineHelpText>
        <label>eBroadcast Service Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eBroadcast_Storage_Usage__c</fullName>
        <description>In Kbytes, the Current Storage Usage for eBroadcast. The storage is used to store the templates and assets (e.g. images)</description>
        <inlineHelpText>In Kbytes, the Current Storage Usage for eBroadcast. The storage is used to store the templates and assets (e.g. images)</inlineHelpText>
        <label>eBroadcast Storage Usage</label>
        <summarizedField>EBC_Resource__c.Size_KBytes__c</summarizedField>
        <summaryForeignKey>EBC_Resource__c.Billing_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>eBroadcast_Storage__c</fullName>
        <description>Storage Capacity override the default value from the setup</description>
        <inlineHelpText>Storage Capacity override the default value from the setup</inlineHelpText>
        <label>eBroadcast Storage</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eBroadcast_Trusted_Sender__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Zuora is pre-authorized to send eBroadcast Campaigns without requiring any approval</description>
        <inlineHelpText>Is this Zuora is pre-authorized to send eBroadcast Campaigns without requiring any approval</inlineHelpText>
        <label>eBroadcast Trusted Sender</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing Account</label>
    <listViews>
        <fullName>EBC_Service_Access_ON</fullName>
        <columns>Zuora__AccountNumber__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>eBroadcast_Product_Access__c</columns>
        <columns>eBroadcast_Email_Balance__c</columns>
        <columns>eBroadcast_Trusted_Sender__c</columns>
        <columns>eBroadcast_Audience_Selection__c</columns>
        <columns>eBroadcast_Add_On_Access__c</columns>
        <columns>eBroadcast_Add_On_Advanced_Reporting__c</columns>
        <columns>eBroadcast_Storage_Usage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eBroadcast_Product_Access__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EBC Service Access ON</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>Zuora__AccountNumber__c</columns>
        <columns>IINETUserID__c</columns>
        <columns>ClientType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Commune Hotels and Resorts</value>
        </filters>
        <label>Search</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Zuora__All</fullName>
        <columns>NAME</columns>
        <columns>Zuora__AccountNumber__c</columns>
        <columns>Zuora__Account__c</columns>
        <columns>Contact__c</columns>
        <columns>ICHCode__c</columns>
        <columns>ClientType__c</columns>
        <columns>Zuora__Zuora_Id__c</columns>
        <columns>Zuora__BillToCountry__c</columns>
        <columns>Zuora__BillToWorkEmail__c</columns>
        <columns>CompanyType__c</columns>
        <columns>Zuora__CreditCardType__c</columns>
        <columns>Zuora__Parent__c</columns>
        <columns>SAPBillTo__c</columns>
        <columns>Zuora__SoldToName__c</columns>
        <columns>Zuora__SoldToId__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tanya&apos;s View</label>
        <language>en_US</language>
        <sharedTo>
            <role>CoordinatorDirectSales</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Billing Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>